# drf-auth

./: README.md  docker-compose.yml  manage.py  pyproject.toml  requirement.txt
hadeeth/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
hadeeth/migrations/: 0001_initial.py
hadeeth_project/: asgi.py  settings.py  urls.py  wsgi.py
